# codox

./: .gitignore  README.md  compile_and_test.sh  docker-compose.yml  index_all_documents.sh  package-lock.json  start.sh  test-docs-httpie.sh  test-frontend.sh  test_import_export.sh  test_import_export_comprehensive.sh  test_multipart.sh  test_multipart2.sh  test_multipart_format.sh  test_search.sh  test_search_full.sh  test_search_permissions.sh  test_upload_debug.sh  test_user_search.sh  test_version_restore.sh  test_version_restore_full.sh  第八章作业.docx
.github/workflows/: ci.yml
collab-service/: README.md  README_协作服务.md  package-lock.json  package.json  server.ts  tsconfig.json
completed/: UserController开发指南.md  工具类实现指南.md  数据库连接检查步骤.md  编译器错误提示优化指南.md
cpp-service/: Authorization:Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NjI1OTM5OTUsImlhdCI6MTc2MjU5MzA5NSwidXNlcl9pZCI6IjEifQ._G7iArjbJyL7WEpnbampbBQBG_EupPHn8UuZrSZCqDI  CMakeLists.txt  README.md  README_c++后端.md  config.json
cpp-service/sql/: init.sql  migration.sql  migration_add_document_status.sql  migration_phase4.sql  migration_phase4_user_management.sql  migration_version_control.sql
cpp-service/src/: main.cpp  test_utils  test_utils.cpp
cpp-service/src/controllers/: AdminUserController.cc  AdminUserController.h  AuthController.cc  AuthController.h  ChatController.cc  ChatController.h  CollaborationController.cc  CollaborationController.h  CommentController.cc  CommentController.h  DocumentController.cc  DocumentController.h  DocumentImportExportController.cc  DocumentImportExportController.h  FeedbackController.cc  FeedbackController.h  HealthController.cc  HealthController.h  NotificationController.cc  NotificationController.h  NotificationSettingController.cc  NotificationSettingController.h  NotificationWebSocket.cc  NotificationWebSocket.h  SearchController.cc  SearchController.h  TaskController.cc  TaskController.h  UserController.cc  UserController.h
cpp-service/src/middleware/: JwtAuthFilter.cc  JwtAuthFilter.h
cpp-service/src/repositories/: VersionRepository.cc  VersionRepository.h
cpp-service/src/services/: NotificationHub.cc  NotificationHub.h  SearchService.cc  SearchService.h
cpp-service/src/utils/: DbUtils.cc  DbUtils.h  DiffUtils.cc  DiffUtils.h  JwtUtil.cc  JwtUtil.h  MinIOClient.cc  MinIOClient.h  NotificationUtils.cc  NotificationUtils.h  PasswordUtils.cc  PasswordUtils.h  PermissionUtils.cc  PermissionUtils.h  ResponseUtils.cc  ResponseUtils.h  TokenUtils.cc  TokenUtils.h
doc-converter-service/: README_文档转换服务.md  index.js  package-lock.json  package.json
doc-converter-service/fonts/: README.md
docker/: docker-compose.yml
docs/: API-01-API设计.md  ARCH-01-总体设计.md  ARCH-02-详细设计.md  CollaborationController详解.md  DEV-11-第四阶段数据库变更分析.md  DEV-12-版本控制功能测试指南.md  GUIDE-01-项目启动指南.md  GUIDE-02-后端API测试方法.md  GUIDE-03-文档导入导出功能说明.md  PHASE-01-用户认证开发指南.md  PHASE-02-文档管理开发指南.md  PHASE-03-协作功能开发指南.md  PHASE-04-功能完善开发指南.md  PHASE-04-导入导出开发指南.md  PROJECT-功能清单.md  PROJECT-项目总结.md  QUICK-FIX-版本控制数据库迁移.md  REQ-01-需求完成文档.md  REQ-01-需求文档.md  TEST-文档导入导出接口测试报告.md  api设计.md  jwt-cpp安装指南.md  前后端开发同步策略.md  后端API测试方法.md  工具类实现指南.md  开发提示与最佳实践.md  总体设计.md  第一阶段开发指南.md  第三阶段开发指南.md  第二阶段开发指南.md  设计文档.md  详细设计.md  需求文档.txt  项目启动指南.md
docs/completed/: DEV-01-AuthController开发指南.md  DEV-03-JWT认证中间件开发指南.md  DEV-04-文档CRUD接口实现指南.md  DEV-05-CollaborationController详解.md  DEV-07-开发提示与最佳实践.md  DEV-08-Drogon回调选择机制.md  DEV-09-异步函数原理说明.md  DEV-10-更新文档逻辑详解.md  FIX-版本恢复内容显示问题修复.md  FIX-版本恢复问题最终修复.md  GUIDE-03-文档导入导出功能说明.md  GUIDE-04-Markdown导入显示问题修复.md  INST-02-切换到apt安装jwt-cpp.md  TEST-文档导入导出接口测试报告.md  TROUB-02-段错误调试指南.md  TROUB-04-MINIO-配置检查指南.md
frontend/: .gitignore  FIRST_PHASE_COMPLETE.md  README.md  README_前端.md  SECOND_PHASE_COMPLETE.md  STEP3_COMPLETE.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  test-update.html  vite.config.ts
frontend/html/: documents.html  editor.html  home.html  index.html  login.html  profile.html  register.html
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AclManager.tsx  CommentPanel.tsx  DocumentEditor.tsx  ExportMenu.tsx  ImportModal.tsx  Layout.tsx  Navbar.tsx  NotificationBell.tsx  ProtectedRoute.tsx  README_导入导出.md  RichTextToolbar.tsx  TaskPanel.tsx  VersionDiffView.tsx  VersionTimeline.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useChatWebSocket.ts  (+2 more)
(+30 files in other folders)
